src/snapshots/http_dragonfly__context__test_context__context_with.snap
---
source: src/context.rs
expression: ctx_with
---
Context(
  own: {
    "TEST_ENV_KEY_2": "TEST_ENV_VALUE_2",
  },
  parent: Some(Context(
    own: {
      "CTX_APP_NAME": "http-dragonfly",
      "CTX_APP_VERSION": "0.5.1",
      "TEST_ENV_HEADER_TO_ADD": "TEST_ENV_HEADER_VALUE",
      "TEST_ENV_KEY": "TEST_ENV_VALUE",
    },
    parent: None,
  )),
)
