src/snapshots/http_dragonfly__context__test_context__context_with_test_environment.snap
---
source: src/context.rs
expression: get_test_ctx()
---
Context(
  own: {
    "CTX_APP_NAME": "http-dragonfly",
    "CTX_APP_VERSION": "0.5.1",
    "TEST_ENV_HEADER_TO_ADD": "TEST_ENV_HEADER_VALUE",
    "TEST_ENV_KEY": "TEST_ENV_VALUE",
  },
  parent: None,
)
